--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "@types/react": "^18.2.6",
     "@types/react-dom": "18.2.4",
     "bootstrap": "^5.2.3",
+    "bufferutil": "^4.0.7",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.5",
+    "lokijs": "^1.5.12",
     "metamask-react": "^2.6.0",
     "moment": "^2.29.4",
     "next": "13.4.5",
     "next-themes": "^0.2.1",
+    "pino-pretty": "^10.2.0",
     "react": "18.2.0",
     "react-collapse": "^5.1.1",
     "react-countdown": "^2.3.5",
@@ -35,6 +38,7 @@
     "react-toastify": "^9.1.3",
     "swiper": "^9.3.2",
     "typescript": "5.0.4",
+    "utf-8-validate": "^6.0.3",
     "uuidv4": "^6.2.13",
     "zustand": "^4.3.8"
   },
