--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@lossdev/react-text-loop": "^0.1.0",
     "@popperjs/core": "^2.11.7",
     "@reduxjs/toolkit": "^1.9.5",
+    "@tanstack/react-query": "^5.0.5",
     "@types/bootstrap": "^5.2.6",
     "@types/node": "20.6.2",
     "@types/prop-types": "^15.7.5",
