--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/prop-types": "^15.7.5",
     "@types/react": "^18.2.6",
     "@types/react-dom": "18.2.7",
+    "@vercel/analytics": "^1.1.1",
     "bootstrap": "^5.2.3",
     "bufferutil": "^4.0.7",
     "eslint": "8.49.0",
