--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bufferutil": "^4.0.7",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "ethereumjs-util": "^7.1.5",
     "kubo-rpc-client": "^3.0.1",
     "lokijs": "^1.5.12",
     "metamask-react": "^2.6.0",
