--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
       },
       {
         "name": "Next.js: debug client-side",
-        "type": "chrome",
+        "type": "pwa-msedge",
         "request": "launch",
         "url": "http://localhost:3000"
       },
